@@ -1,3 +1,4 @@
+* Handle device cookie
 * Add breadcrumb as title of window form
 * Manage help for each selection
 * Display revision on dialog
